auto test middle commit 2